Fix transition flicker

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ html,
 
     position: absolute;
 
-    left: 50%;
+    left: -150%;
     top: calc(50% - 32px);
     transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
@@ -240,7 +240,7 @@ p {
     0% {
         left: 50%
     }
-
+    
     100% {
         left: 200%
     }
@@ -254,6 +254,7 @@ p {
 .left-out {
     animation-name: left-out-anim;
     animation-duration: 400ms;
+    left: -100%;
 }
 
 .right-in {
@@ -264,12 +265,14 @@ p {
 .right-out {
     animation-name: right-out-anim;
     animation-duration: 400ms;
+    left: 200%;
 }
 
 .slide-visible {
     display: flex !important;
     flex-flow: column wrap;
     align-items: center;
+    left: 50%;
 }
 
 input {
